LibTsPlayer: refactor CTC interface [4/4]
PD#SWPL-17066

Problem:
need refactor CTC interface

Solution:
1) refactor our CTC interface， make it conform to CTC standard;
2) adjust our own extension, append it to CTC interface header if it is
public needs.
3) separate middle ware vendor's private extensions from our's.

Verify:
android p/G12A

Change-Id: Iadf5836a5e1ca8c5cf6d9c9f68c88908d4e2c6ab
Signed-off-by: houren.wang <houren.wang@amlogic.com>

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -4,6 +4,23 @@
     android:layout_height="fill_parent"
     android:background="#55000000"
     android:orientation="vertical" >
+
+	<LinearLayout 
+	    android:layout_width="fill_parent"
+	    android:layout_height="wrap_content"
+	    android:orientation="horizontal" >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:text="URL:"/>
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/urlText"
+            android:text="/data/a.ts" />
+    </LinearLayout>
+
 	<LinearLayout 
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
@@ -13,6 +30,12 @@
 	    android:layout_width="210dip"
 	    android:layout_height="fill_parent"
 	    android:orientation="vertical" >
+	    <Button
+	        android:id="@+id/play"
+	        android:layout_width="fill_parent"
+	        android:layout_height="wrap_content"
+	        android:text="@string/button_play" />
+            <requestFocus></requestFocus>
 	    <Button
 	        android:id="@+id/pause"
 	        android:layout_width="fill_parent"
